Bug 111851 - FILEOPEN: RTF: table's shading ignored
Summary: FILEOPEN: RTF: table's shading ignored
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
3.5.0 release
Hardware: All All
: medium normal
Assignee: Vasily Melenchuk (CIB)
URL:
Whiteboard: target:7.4.0 target:7.3.3
Keywords: filter:rtf, preBibisect, regression
Depends on:
Blocks: RTF-Opening RTF-Tables
  Show dependency treegraph
 
Reported: 2017-08-16 09:09 UTC by Nikola
Modified: 2022-03-24 13:15 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
RTF clshdng example (76.38 KB, application/rtf)
2017-08-16 09:09 UTC, Nikola
Details
How it looks in MSO 2010 (19.15 KB, image/png)
2017-08-16 09:30 UTC, Xisco Faulí
Details
The example file in Word and Writer master (159.42 KB, image/png)
2022-01-31 11:14 UTC, Gabor Kelemen (Collabora)
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Nikola 2017-08-16 09:09:56 UTC
Created attachment 135582 [details]
RTF clshdng example

Hi,

When .rtf file with row shading in table opened, shading ignored. Value under 1000. Different visible on OpenOffice.

Rtf definition for clshdng.

Attached example file.

Regards, Nikola.
Comment 1 Xisco Faulí 2017-08-16 09:29:49 UTC
Reproduced in

Version: 6.0.0.0.alpha0+
Build ID: a19dc104ec008f0bb44676d63d4764c6d7442a0d
CPU threads: 4; OS: Linux 4.10; UI render: default; VCL: gtk3; 
Locale: ca-ES (ca_ES.UTF-8); Calc: group

Version: 4.3.0.0.alpha1+
Build ID: c15927f20d4727c3b8de68497b6949e72f9e6e9e

Version 4.1.0.0.alpha0+ (Build ID: efca6f15609322f62a35619619a6d5fe5c9bd5a)

but not in

LibreOffice 3.3.0 
OOO330m19 (Build:6)
tag libreoffice-3.3.0.4
Comment 2 Xisco Faulí 2017-08-16 09:30:27 UTC
Created attachment 135583 [details]
How it looks in MSO 2010
Comment 3 Aron Budea 2017-10-03 05:19:10 UTC
Alredy buggy in 3.5.0.3.
Comment 4 QA Administrators 2018-10-06 02:50:00 UTC Comment hidden (obsolete)
Comment 5 Roman Kuznetsov 2018-10-06 08:15:47 UTC
still repro in 

Version: 6.2.0.0.alpha0+
Build ID: 1aa37aa6bee19099b57555a6d839992b054aa405
CPU threads: 4; OS: Windows 10.0; UI render: GL; 
TinderBox: Win-x86@42, Branch:master, Time: 2018-09-23_10:17:54
Locale: ru-RU (ru_RU); Calc: threaded
Comment 6 Aron Budea 2019-06-22 18:55:54 UTC
(In reply to Aron Budea from comment #3)
> Alredy buggy in 3.5.0.3.
And in oldest of bibisect-43all, the correct keyword is preBibisect.
Comment 7 QA Administrators 2021-06-22 03:37:42 UTC Comment hidden (obsolete)
Comment 8 Gabor Kelemen (Collabora) 2022-01-31 11:14:56 UTC
Created attachment 177929 [details]
The example file in Word and Writer master

Paragraph shading is still missing on open in:

Version: 7.4.0.0.alpha0+ (x64) / LibreOffice Community
Build ID: eb69767d7c1bb8e6e780fd9503f08c9d7f5ecb45
CPU threads: 13; OS: Windows 10.0 Build 19042; UI render: default; VCL: win
Locale: hu-HU (hu_HU); UI: en-US
Calc: threaded
Comment 9 Commit Notification 2022-03-23 08:21:56 UTC
Vasily Melenchuk committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/e5f96e2881d46ed71e390524d7172dca211de3e4

tdf#111851: rtf import: fifty shades of grey

It will be available in 7.4.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 10 Commit Notification 2022-03-23 11:23:30 UTC
Vasily Melenchuk committed a patch related to this issue.
It has been pushed to "libreoffice-7-3":

https://git.libreoffice.org/core/commit/ca26781a82b8155c40f850557f7399b0543fcc1a

tdf#111851: rtf import: fifty shades of grey

It will be available in 7.3.3.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.